# homegrown-craigslist

./: .env  README.md  pyproject.toml  requirements.txt
db/repository/: jobs.py
templates/auth/: login.html
templates/components/: navbar.html
templates/general_pages/: homepage.html
templates/jobs/: create_job.html  detail.html  show_jobs_to_delete.html
templates/users/: register.html
