[tool.poetry]
name = "job-board"
version = "0.1.0"
description = "Доска объявлений для поиска работы"
authors = ["valerieguch <valeria.guch2000@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
Jinja2 = "^3.1.2"
aiofiles = "^0.8.0"
SQLAlchemy = "^1.4.37"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
databases = {extras = ["sqlite"], version = "^0.6.0"}
asyncpg = "^0.25.0"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.27.1"
pre-commit = "^2.19.0"
python-multipart = "^0.0.5"
seedir = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
